<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stivenduque.myform.MainForm"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@android:color/transparent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/stylelinearlayout"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/stylelinerlayouttwo"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/user"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:textColorHint="@color/white"
                        android:theme="@style/AppTheme">

                        <EditText
                            android:id="@+id/etUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user"
                            android:inputType="textPersonName"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/stylelinerlayouttwo"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/email"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:textColorHint="@color/white"
                        android:theme="@style/AppTheme">

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/stylelinerlayouttwo"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/pswd"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:textColorHint="@color/white"
                        android:theme="@style/AppTheme">

                        <EditText
                            android:id="@+id/etPswd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:hint="@string/pswdconf"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/stylelinerlayouttwo"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/pswd"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:textColorHint="@color/white"
                        android:theme="@style/AppTheme">

                        <EditText
                            android:id="@+id/etPswdconf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.7"
                            android:hint="@string/pswdconf"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stylelinerlayouttwo"
                    android:layout_marginBottom="10dp">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/citysSpinner"
                        android:spinnerMode="dialog"

                        />
                </LinearLayout>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/stylelinerlayouttwo"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="0.5"
                        android:text="@string/Male" />

                    <RadioButton
                        android:id="@+id/rbFamale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="0.5"
                        android:text="@string/Famale" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/chbSwim"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/swim"
                            android:background="@drawable/stylelinerlayouttwo"/>

                        <CheckBox
                            android:id="@+id/chbDancing"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/dancing"
                            android:background="@drawable/stylelinerlayouttwo"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <CheckBox
                            android:id="@+id/chbCook"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/cook"
                            android:background="@drawable/stylelinerlayouttwo"/>

                        <CheckBox
                            android:id="@+id/chbRead"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/read"
                            android:background="@drawable/stylelinerlayouttwo"/>
                    </LinearLayout>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_date"
                    android:background="@drawable/stylelinerlayouttwo"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="false"
                    android:id="@+id/btnDate"/>
            </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:drawableLeft="@drawable/guardar"
            android:textAllCaps="false"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/stylelinearlayoutthree"
            android:id="@+id/btnSave"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/stylelinearlayout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvText"/>
    </LinearLayout>

    </LinearLayout>

</ScrollView>